fix: broken style in cfp submission page

--- a/fossunited/public/css/style.css
+++ b/fossunited/public/css/style.css
@@ -2048,6 +2048,7 @@ h6{
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    min-height: 800px;
 }
 
 .review-statistics-grid{
